--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div class="logo">iPex</div>
     <nav>
-      <a href="/servicios">Servicios</a>
+      <a href="/public/servicios.html">Servicios</a>
     </nav>
   </header>
   <section class="hero">
